# geany-vala-toys

./: Makefile.am  README  autogen.sh  configure.ac
plugins/: Makefile.am
plugins/dock/: Makefile.am  dock-plugin.vala
plugins/dock/gdl/: Makefile.am  gdl-dock-layout.c  gdl-dock-master.h  gdl-dock-object.c  gdl-i18n.c  gdl.h  gdl.vapi
plugins/help/: Makefile.am  devhelp.vala  help-plugin.vala
plugins/help/devhelp/: Makefile.am  dh-util.c  libdevhelp-2.0.deps  libdevhelp-2.0.vapi
plugins/prj/: Makefile.am  autotools.vala  backend.vala  command.vala  data.vala  group.vala  item.vala  manager.vala  node.vala  prj-plugin.vala  project.vala  set.vala  source.vala  target.vala  variable.vala
po/: Makefile.in.in  POTFILES.in
vapi/: geany.vapi
